# babyxrc

./: .gitignore  CMakeLists.txt  README.md  babyxrcmain.c  bdf2c.h  bmp.c  bmp.h  gif.c  gif.h  jpeg.c  jpeg.h  loadcursor.c  loadcursor.h  loadimage.c  loadimage.h  loadtiff.h  nanosvg.h  nanosvgrast.h  rbtree.c  rbtree.h  readme.txt  resize.c  resize.h  savejpeg.c  ttf2c.h  xmlparser.c  xmlparser.h
Examples/: readme.txt  taglist.txt
Examples/AminoInvadersFiles/: Thumbs.db  aminoacids.c  aminoacids.xml  yellow_smiley.cur
Examples/AudioTest/: audiotest.c  audiotest.xml
Examples/BabyXFS/: Treasury.xml  source.c  testdir.xml  watershed.xml  writesource.xml
Examples/BabyXFS/testdir/: readme.txt
Examples/BabyXFS/testdir/text/: books.xml
Examples/BabyXFS/testdir/text/newlines/: mary_nl.txt  nl_mary_nl_nl.txt  tab_mary.txt_nl
Examples/BabyXFS/testdir/text/src/: filesystemtestfiles.c
Examples/BabyXFS/testdir/text/whitespace/: backspaces_12.txt  nlcr_12.txt
Examples/BabyXFS/watershed/: a.out  adaptivethreshold.c  sobel.c  soillewatershed.c  testmain.c  watershed.c
Examples/BabyXFS/watershed/a.out.dSYM/Contents/Resources/DWARF/: a.out
Examples/BabyXFS/writing_own_source/: readme.txt  real_source.c  writeownsource.xml  writesource.xml
Examples/BabyXFS/writing_own_source/writeownsource/: writeownsource.c  xmlparser2.c
Examples/BabyXFS/writing_own_source/writeownsource/doc/: readme.txt
Examples/BabyXFS/writing_own_source/writeownsource_archive/: asciitostring.c  asciitostring.h  bbx_write_source_archive.c  source.c  writeownsource.c
Examples/Dataframes/: SP.POP.TOTL.json  employee.csv  script.xml  strings.csv  temp.c  temp.h  test.c
Examples/Fonts/: compilefontfun.txt  fontfun.c  fonttest.xml
Examples/Text/: bbx_fs_shell.xml  bbx_fs_shell_usage.xml  greekhello.utf16  greekhello.utf8  international.xml  internationaltest.c  smileyandappleemoji.txt  smileyandappleemoji.utf16  strings.c  strings.xml  stringstest.c
Examples/Text/helpfiles/: babyxrc_help.xml  help_on_bb.txt  help_on_cat.txt  help_on_cd.txt  help_on_cp.txt  help_on_edit.txt  help_on_export.txt  help_on_help.txt  help_on_import.txt  help_on_ls.txt  help_on_mkdir.txt  help_on_mv.txt  help_on_rm.txt  help_on_rmdir.txt  help_on_system.txt  makeheader.c
Examples/Text/long_texts/: StToms.txt
babyxfs_src/: babyxfs_cp.c  babyxfs_dirtoxml.c  babyxfs_escapexml.c  babyxfs_extract.c  babyxfs_grep.c  babyxfs_ls.c  babyxfs_rm.c  babyxfs_test.c  babyxfs_xmltodir.c  bbx_filesystem.c  bbx_filesystem.h  bbx_ls.c  bbx_options.c  bbx_options.h  bbx_write_source.c  bbx_write_source.h  bbx_write_source_archive.c  bbx_write_source_archive.h  bbx_write_source_flat.c  bbx_write_source_flat.h  directorytoxml.c  is_directory_posix.c  listdirectory.c  readdirectory_posix.c  readme.txt  rot13.c  source.c  strnatcmp.c  testbabyxfilesystem.c
babyxfs_src/shell/: babyxfs_grep.c  babyxfs_shell.c  basic.c  bbx_fs_shell.c  bbx_fs_shell.h  bbx_fs_shell_usage.c  bbx_shell_usage.c  help_text.c  printfv.c  printfv.h
docs/: BBX_FileSystemObject.html  BBX_OptionsObject.html  BabyXFS.html  BabyX_hello.html  FileSystemXML.html  babyjokes.html  babyxfs_shell.html  bbx_filesystem.html  dataframes.html  importingdirectories.html  index.html  owl_and_text.xml  owl_and_text_e.xml  prism.css  prism.js  sourcefiles.html  usingcsv.html  usingloadimage.html  usingoptions.html  usingrbtree.html  usingutf8.html  usingxmlparser.html  xmlparser2.html
docs/StToms/: Chapter1.html  Chapter10.html  Chapter11.html  Chapter12.html  Chapter13.html  Chapter14.html  Chapter15.html  Chapter16.html  Chapter17.html  Chapter2.html  Chapter3.html  Chapter4.html  Chapter5.html  Chapter6.html  Chapter7.html  Chapter8.html  Chapter9.html  index.html
docs/owl_and_text/: readme.txt
docs/src/: directory.c  directorytoxml.c  xmlparser2.h
freetype/: freetype.h  ft_conf.h  fterrid.h  readme.txt  ttcache.h  ttcalc.c  ttcmap.c  ttcmap.h  ttdebug.c  ttengine.h  ttinterp.h  ttmutex.h  ttobjs.c  ttobjs.h  tttables.h  tttags.h  tttypes.h
samplerate/: common.h  src_linear.c  src_sinc.c  src_zoh.c
src/: aifffile.c  aifffile.h  babyxrcmain.c  basic.c  basic.h  bbx_utf8.c  bbx_utf8.h  bdf2c.c  bdf2c.h  bmp.c  bmp.h  compileme.txt  csv.c  csv.h  dataframes.c  dataframes.h  dumpcsv.c  dumpcsv.h  gif.c  gif.h  jpeg.c  jpeg.h  libc.h  loadasutf8.c  loadasutf8.h  loadcursor.c  loadcursor.h  loadimage.c  loadmp3.c  loadmp3.h  loadtiff.c  minimp3.c  nanosvg.h  nanosvgrast.h  options.c  options.h  rbtree.c  rbtree.h  readme.txt  resize.c  (+15 more)
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/freetype/: ftnameid.h  ttapi.c  ttcache.c  ttcalc.h  ttconfig.h  ttdebug.h  ttextend.c  ttextend.h  ttfile.c  ttfile.h  ttgload.c  ttgload.h  ttinterp.c  ttload.c  ttload.h  ttmemory.c  ttmemory.h  ttmutex.c  ttraster.c  ttraster.h
src/samplerate/: float_cast.h  samplerate.c
vs/BabyXRC/: BabyXRC.sln  BabyXRC.vcxproj  BabyXRC.vcxproj.filters
